fix: 계약 히스토리 조회 시 중복키 에러 해결